@@ -2,14 +2,16 @@
 Hash: SHA1
 
 DIST lettuce-0.1.21.tar.gz 66536 RMD160 e2daab9cc2988bd56c13094493a159700be520fa SHA1 9fc47b96bb91a537ba0a5dcd94e88d34a6b2b955 SHA256 1c9041e3b20e838dacd30b85b68e0d19167388a6d7cac35054cf76d4ffc01d9c
+DIST lettuce-0.1.25.tar.gz 70019 RMD160 768d43ebb2c8de9ed08300564093f4b8d9467ca0 SHA1 ac66c3205c0bffa72be0e06e2ca153578c38a7c8 SHA256 7e080d80e8cc5ad80429602bb63ea5e618a216ce4aa13cf2626dfbb2183b8ec9
 EBUILD lettuce-0.1.21.ebuild 525 RMD160 37e055fb255790622d4237a1bc750d3905fcb0fa SHA1 08a96cc5b5f8a700de88024eca713f6adaaee753 SHA256 7e555bf3339871fad8bc02daaf7189c86247dca3dc5e99476f0322998637f3db
-MISC ChangeLog 5689 RMD160 268bad2b17d3c1bdcb5ce2f059f7299ee904f1e6 SHA1 ad84a64b74eb3c9a08d3e88af2dbb5fac1a337b5 SHA256 0413939008a7405736547e7e216fa99a41f63ed676bc9ffb7538cf874adc6264
+EBUILD lettuce-0.1.25.ebuild 527 RMD160 2e8d390a94bef2f622567ddc611ac6e9dd158b42 SHA1 88448bb875d2e6d04d0e831d27a60ac5a5bc2551 SHA256 d02fb78b55246fa08426c8acae32344b29e1e69d342bfbf2a4aa814430446368
+MISC ChangeLog 5812 RMD160 d22bcc34956be510b01608e1df59ced9d6f7bb2c SHA1 71d8d161f91ea52f42bd98bdc40adc4db4a3a637 SHA256 0afef8a926206e55be94e4e3596cbabeec2f6715e629ce1a3c39cb38e2cd01d6
 MISC metadata.xml 543 RMD160 ba3769e47c6fd85b04b312ae9e19f0b7df54d047 SHA1 9348d7b60519187a8c2634ed087236ae176d3c9b SHA256 ea4a59405434a4b345393c1bc788273477110612782560fa496f8e92c5357db3
 MISC watch 71 RMD160 edd7da79f12dfdb2aefdeef0ad84169198ac81e1 SHA1 179d11f0283700ba50fec038510e6799bf4cda97 SHA256 38b70a11ff644c207b17b11d885bbafb7166e1b9bcc238b58a630f54c8cd0b4c
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk2VzgwACgkQzJrj3cAXR0kH6gCfWfvb2OHmGDMtK8GNIUyLrT+5
-w5wAmwacYNqSpRCYKXp7mC2Q75G7TUzl
-=iDKB
+iEYEARECAAYFAk2a8rAACgkQzJrj3cAXR0kc/ACffdyTt9n+GpIvTTpBzi9GCD6b
+OysAoLb1sa6xcKM4fvVil+5n9EtYwk/w
+=bCkd
 -----END PGP SIGNATURE-----
