@@ -2,6 +2,11 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*lettuce-0.1.25 (05 Apr 2011)
+
+  05 Apr 2011; James Rowe <jnrowe@gmail.com> +lettuce-0.1.25.ebuild:
+  Version bump [319].
+
   01 Apr 2011; James Rowe <jnrowe@gmail.com> -lettuce-0.1.20.ebuild,
   lettuce-0.1.21.ebuild:
   Keyworded x86.
